<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menu_none">None</string>
    <string name="menu_hard_ai">Hard AI</string>
    <string name="menu_medium_ai">Medium AI</string>
    <string name="menu_easy_ai">Easy AI</string>
    <string name="menu_puzzle">Puzzle</string>
    <string name="menu_ai">AI</string>
    <string name="menu_online">Online</string>
    <string name="intro_thanks_guys">Thanks guys!</string>
    <string name="intro_contributors">Contributers</string>
    <string name="intro_credits">Credits</string>
    <string name="editor_share_your_work">Share your work</string>
    <string name="unlocks_complete_prefix">Complete: </string>
    <string name="unlocks_pinkmouse_text">Pink mice</string>
    <string name="unlocks_contributor_text">Elite mice</string>
    <string name="unlocks_xmas_text">Christmas</string>
    <string name="unlocks_obsidian_text">Obsidian mice</string>
    <string name="unlocks_ghostmice_text">Ghost mice</string>
    <string name="unlocks_lineart_text">Line art</string>
    <string name="unlocks_lineart_hint">Beat 100 levels to unlock</string>
    <string name="unlocks_ghost_hint">Beat 60 levels to unlock</string>
    <string name="unlocks_obsidian_hint">Beat 30 levels to unlock</string>
    <string name="unlocks_christmas_hint">Play during December to unlock</string>
    <string name="unlocks_contributor_hint">Submit a level with the editor to unlock</string>
    <string name="unlocks_pink_mice_hint">Beat 5 levels to unlock</string>
	<string name="unlocks_back">Back</string>
    <string name="puzzle_run_speed_faster">Faster</string>
    <string name="error_loading_level">Error loading level</string>
    <string name="mp_beta_warning">BETA warning:\n There is currently no multiplayer. Versus AI is in work, and once satisfactory I will start on proper multiplayer</string>
    <string name="menu_unlocks">Unlocks</string>
	<string name="tutorial_15">Finally, if you enjoy this game then give it a good review and tell your friends about it</string>
    <string name="tutorial_14">Press menu to see rotation options</string>
    <string name="tutorial_13">The rotation will find the best fit by default. You can also manually rotate</string>
    <string name="menu_run_training_detail">This appears to be your first time playing ShokoRocket, would you like to play the training levels?</string>
    <string name="menu_run_training">Run training?</string>
    <string name="menu_train_me">Train me!</string>
    <string name="game_ok">OK</string>
    <string name="game_complete_100_complete">Pack complete</string>
    <string name="game_complete_level_complete">Level complete</string>
    <string name="game_complete_menu">Back to menu</string>
    <string name="game_complete_next">Next</string>
    <string name="game_rotate">Rotate</string>
    <string name="editor_create_a_level_first">Create a level first</string>
    <string name="menu_editor_requies_storage">External storage not mounted, editor cannot be used</string>
    <string name="tutorial_12">Cats will destroy arrows if they hit them head on, but not if they hit them from the side</string>
    <string name="tutorial_11">Don\'t let cats kill any mice</string>
    <string name="tutorial_10">Note that problem points are highlighted with a circle. Just hit reset and try again!</string>
    <string name="tutorial_9">You need to prevent mice from falling into black holes, and stop cats reaching the rocket</string>
    <string name="tutorial_8">Tap start once the arrows are in place. If you don\'t have the answer then hit reset and try again</string>
    <string name="tutorial_7">You can always remove them the same way they were placed, or use the reset button to clear all the arrows</string>
    <string name="tutorial_6">You only have a limited stock of arrows, so think carefully before placing them</string>
    <string name="tutorial_5">then swipe across the screen in the direction you want</string>
    <string name="tutorial_4">Place the cursor by tapping the spot where the arrow should go...</string>
    <string name="tutorial_3">Do this by placing arrows for them to follow</string>
    <string name="tutorial_2">The mice are not very clever, so you need to direct them to the rockets</string>
    <string name="tutorial_1">You must save the mice from the evil space cats</string>
    <string name="game_back">Back</string>
    <string name="game_go">Go</string>
    <string name="game_reset">Reset</string>
    <string name="editor_submission_address">danishcake@googlemail.com</string>
    <string name="editor_temp_fail">Unable to create a temporary file</string>
    <string name="editor_solution_valid">Solution valid</string>
    <string name="editor_solution_invalid">Solution invalid</string>
    <string name="editor_share_message">Please find attached my ShokoRocket level. I submit it to the public domain and request that you include it in future versions</string>
    <string name="editor_overwrite_confirmation">File already exists. Overwrite?</string>
    <string name="editor_enter_filename">Enter filename</string>
    <string name="editor_no">No</string>
    <string name="editor_yes">Yes</string>
    <string name="editor_new_level_confirmation">Are you sure you want to create a new level?</string>
    <string name="editor_unable_to_save">Unable to save </string>
    <string name="editor_saved_as">Saved as </string>
    <string name="editor_menu_edit_mode">Edit mode</string>
    <string name="editor_menu_verify">Verify</string>
    <string name="editor_menu_properties">Properties</string>
    <string name="editor_menu_share">Share</string>
    <string name="editor_menu_save">Save</string>
    <string name="editor_menu_new">New</string>
    <string name="editor_run_speed_try">Try</string>
    <string name="editor_run_speed_reset">Reset</string>
    <string name="editor_run_speed_faster">Faster</string>
    <string name="editor_mode_walls">Walls</string>
    <string name="editor_mode_rockets">Rockets</string>
    <string name="editor_mode_holes">Holes</string>
    <string name="editor_mode_cats">Cats</string>
    <string name="editor_mode_mice">Mice</string>
    <string name="editor_mode_arrows">Arrows</string>
    <string name="editor_create_a_new_level">Create a new level</string>
    <string name="menu_new">New</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_edit_this_level_prompt">Edit this level?</string>
    <string name="menu_editor">Editor</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_play">Play</string>
    <string name="menu_level_name">Level name</string>
    <string name="menu_external_storage_unmounted">External storage unmounted</string>
    <string name="menu_error_loading">Error loading</string>
    <string name="menu_sound_on">Turn sound off</string>
    <string name="menu_sound_off">Turn sound on</string>
    <string name="menu_autorotate_off">Turn autorotate on</string>
    <string name="menu_autorotate_on">Turn autorotate off</string>
    <string name="level_submit">Agree and submit</string>
    <string name="ShareExplanationText">This will email your creation to the author, who will endeavour to include it in future versions. Ensure that you have correctly entered your name and level name. By submitting you enter the level into the public domain. If you have multiple levels to submit then it may be more efficient to send them all from your PC - the levels are stored on the phone external storage</string>
    <string name="level_accept">Accept</string>
    <string name="level_set_filename">OK</string>
    <string name="level_filename_label">Filename</string>
    <string name="level_default_filename">Editor.Level</string>
    <string name="level_create">Create</string>
    <string name="level_default_author">Unknown Author</string>
    <string name="level_default_name">Unnamed Level</string>
    <string name="level_name_description">The name to display in the user interface</string>
    <string name="level_size_y_prompt">Select the level height</string>
    <string name="level_size_x_prompt">Select the width</string>
    <string name="level_width_label">Level width</string>
    <string name="level_height_label">Level height</string>
    <string name="app_description">A clone of Chu Chu Rocket, save the mice from the evil cats!</string>
    <string name="app_name">Shoko Rocket</string>
</resources>
